--- a/alphabetapruning.ipynb
+++ b/alphabetapruning.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "37c0bd4a-941e-425b-9348-0db0a9baa720",
    "metadata": {},
    "outputs": [
@@ -113,79 +113,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial tour: ('E', 'B', 'A', 'D', 'C') -> Distance: 27.36\n",
-      "Improved tour: ('E', 'B', 'A', 'C', 'D') -> Distance: 24.26\n",
-      "Improved tour: ('E', 'C', 'A', 'B', 'D') -> Distance: 22.34\n",
+      "Initial tour: (2, 3, 0, 1) -> Distance: 95\n",
+      "Improved tour: (2, 3, 1, 0) -> Distance: 80\n",
       "\n",
       "Reached a local optimum.\n",
       "\n",
-      "Final optimal tour found: ('E', 'C', 'A', 'B', 'D') -> Distance: 22.34\n"
+      "Final optimal tour found: (2, 3, 1, 0) -> Distance: 80\n"
      ]
     }
    ],
    "source": [
     "import random\n",
-    "import math\n",
     "\n",
-    "# Define the cities and their coordinates\n",
-    "CITIES = {\n",
-    "    'A': (0, 0),\n",
-    "    'B': (1, 5),\n",
-    "    'C': (4, 1),\n",
-    "    'D': (6, 3),\n",
-    "    'E': (8, 0)\n",
-    "}\n",
-    "\n",
-    "def distance(city1, city2):\n",
-    "    x1, y1 = CITIES[city1]\n",
-    "    x2, y2 = CITIES[city2]\n",
-    "    return math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+    "# Define the distances between cities in a matrix\n",
+    "# DISTANCES[i][j] is the distance from city i to city j\n",
+    "DISTANCES = [\n",
+    "    [0, 10, 15, 20],   # Distances from city 0\n",
+    "    [10, 0, 35, 25],   # Distances from city 1\n",
+    "    [15, 35, 0, 30],   # Distances from city 2\n",
+    "    [20, 25, 30, 0]    # Distances from city 3\n",
+    "]\n",
     "\n",
     "def total_distance(tour):\n",
+    "    \"\"\"Calculates the total distance of a given tour using the distance matrix.\"\"\"\n",
     "    dist = 0\n",
     "    for i in range(len(tour) - 1):\n",
-    "        dist += distance(tour[i], tour[i+1])\n",
-    "    dist += distance(tour[-1], tour[0])     \n",
+    "        dist += DISTANCES[tour[i]][tour[i+1]]\n",
+    "    dist += DISTANCES[tour[-1]][tour[0]]  # Return to the starting city\n",
     "    return dist\n",
     "\n",
     "def get_neighbor(tour):\n",
+    "    \"\"\"Generates a new neighboring tour by swapping two random cities.\"\"\"\n",
     "    neighbor = list(tour)\n",
     "    i, j = random.sample(range(len(neighbor)), 2)\n",
     "    neighbor[i], neighbor[j] = neighbor[j], neighbor[i]\n",
     "    return tuple(neighbor)\n",
     "\n",
-    "def hill_climbing(cities):\n",
+    "def hill_climbing():\n",
+    "    \"\"\"Performs the hill climbing algorithm to find a shorter TSP tour.\"\"\"\n",
     "    \n",
-    "    current_tour = list(cities.keys())\n",
-    "    random.shuffle(current_tour)\n",
-    "    current_tour = tuple(current_tour)\n",
+    "    # 1. Start with a random initial solution\n",
+    "    cities = [0, 1, 2, 3]\n",
+    "    random.shuffle(cities)\n",
+    "    current_tour = tuple(cities)\n",
     "    current_distance = total_distance(current_tour)\n",
     "\n",
-    "    print(f\"Initial tour: {current_tour} -> Distance: {current_distance:.2f}\")\n",
+    "    print(f\"Initial tour: {current_tour} -> Distance: {current_distance}\")\n",
     "\n",
     "    while True:\n",
+    "        # 2. Find the best neighbor\n",
     "        best_neighbor = None\n",
     "        best_neighbor_distance = current_distance\n",
     "\n",
-    "        for _ in range(100):  \n",
+    "        # Check a limited number of neighbors\n",
+    "        for _ in range(50):\n",
     "            neighbor = get_neighbor(current_tour)\n",
     "            neighbor_distance = total_distance(neighbor)\n",
     "\n",
+    "            # 3. If a better neighbor is found, move to it\n",
     "            if neighbor_distance < best_neighbor_distance:\n",
     "                best_neighbor = neighbor\n",
     "                best_neighbor_distance = neighbor_distance\n",
     "        \n",
+    "        # 4. If no better neighbor is found, we've reached a local optimum.\n",
     "        if best_neighbor_distance < current_distance:\n",
     "            current_tour = best_neighbor\n",
     "            current_distance = best_neighbor_distance\n",
-    "            print(f\"Improved tour: {current_tour} -> Distance: {current_distance:.2f}\")\n",
+    "            print(f\"Improved tour: {current_tour} -> Distance: {current_distance}\")\n",
     "        else:\n",
     "            print(\"\\nReached a local optimum.\")\n",
     "            return current_tour, current_distance\n",
     "\n",
+    "# Driver code\n",
     "if __name__ == \"__main__\":\n",
-    "    final_tour, final_distance = hill_climbing(CITIES)\n",
-    "    print(f\"\\nFinal optimal tour found: {final_tour} -> Distance: {final_distance:.2f}\")"
+    "    final_tour, final_distance = hill_climbing()\n",
+    "    print(f\"\\nFinal optimal tour found: {final_tour} -> Distance: {final_distance}\")"
    ]
   },
   {
